--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CowAPP</string>
+    <string name="title_activity_place_cad_list">PlaceCadListActivity</string>
 </resources>
